# bfscoin

./: .gitignore  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  libbitcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
build_msvc/: bitcoin_config.h
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/seeds/: generate-seeds.py  nodes_main.txt  nodes_test.txt
doc/: JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  bitcoin-conf.md  developer-notes.md  files.md
doc/man/: Makefile.am  bfscoin-cli.1  bfscoin-qt.1  bfscoin-tx.1  bfscoin-wallet.1  bfscoind.1
doc/omnicore/: configuration.md
share/: setup.nsi.in
share/examples/: bfscoin.conf
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
share/qt/: Info.plist.in
share/rpcauth/: rpcauth.py
src/: Makefile.am  Makefile.qt.include  amount.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  coins.cpp  core_write.cpp  hash.cpp  hash.h  httprpc.cpp  init.cpp  key_io.cpp  miner.cpp  omnicore_api.cpp  omnicore_api.h  outputtype.cpp  txdb.cpp  txmempool.cpp  validation.cpp  validation.h  versionbits.h
src/bench/: duplicate_inputs.cpp  rpc_blockchain.cpp
src/consensus/: params.h  (+3 more)
(+170 files in other folders)
