dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=bfscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bfscoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=bfscoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=bfscoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=bfscoin-wallet.1
endif
endif
